--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,8 +1,5 @@
-
-
-
 .header {
-    background: url(/img/bgc/Rectangle.png);
+    background: url("/img/bgc/Rectangle.png");
     background-size: cover;
     width: 100%;
     height: 737px;
@@ -18,10 +15,6 @@
     padding: 22px 0;
     margin-bottom: 196px;
 }
-
-
-
-
 
 .topbar {
     display: flex;
@@ -53,35 +46,16 @@
     align-items: center;
     .menu-list {
         display: flex;
-    
         .menu-item {
             color: $grey-3;
-            font-family: 'Poppins', sans-serif;
             font-size: 18px;
             font-weight: 500;
             margin-right: 58px;
+            text-decoration: none;
         }
        
     }
 }
-
-.btn{
-    color: $white;
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    background-color: $purple;
-    width: 234px;
-    height: 60px;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    
-    &:hover {
-        background: $purple-dark;
-    }
-} 
 
 .header-content {
     .header-content-title {
@@ -90,15 +64,16 @@
         font-size: 56px;
         font-weight: 400;
         margin-bottom: 30px;
+        max-width: 550px;
     }
 
     .header-content-text {
         color: $dark-lilac;
-        font-family: 'Poppins', sans-serif;
         font-size: 18px;
         font-weight: 400;
         margin-bottom: 30px;
         line-height: 27px;
+        max-width: 750px;
     }
 }
 
