--- a/scss/video-blog.scss
+++ b/scss/video-blog.scss
@@ -6,4 +6,10 @@
     font-size: 48px;
     font-weight: 400;
     margin-bottom: 50px;
+    max-width: 550px;
+}
+
+.video {
+    width: 100%;
+    height: 780px;
 }
